# TGA-TeamGipsyAgent

./: .env.example  .gitignore  .mcp.tga.example.json  LICENSE  README.md  pyproject.toml  本周开发计划书.md
apps/: __init__.py
config/: mcp.example.json  mcp.json
core/: AGENT_CORE_DETAILED_DESIGN.md  AGENT_CORE_INTERFACES.md  README.md  ROLE1_AGENT_CORE.md  ROLE1_AGENT_CORE_TODO.md  __init__.py  agent.py  config.py  contracts.py  graph.py
docs/: ALIYUN_DEPLOYMENT.md  ARCHITECTURE_IMPROVEMENT_PLAN.md  BREACHWEAVE_UI_ALIGNMENT.md  LLM_CONFIG.md  MCP_CONFIGURATION.md  MODE_COMPLETION_ARCHITECTURE.md  REFACTOR_PLAN.md  REFACTOR_VALIDATION.md  TASK_C3F31F2D6265_ANALYSIS.md  TGA_CTF_CAPABILITIES.md  TGA_MCP_FULL_INTEGRATION.md  TGA_MVP.md  TGA_REPORT_SCHEMA.md  TGA_RUNBOOK.md  TGA_SECURITY_MODEL.md  V2_MIGRATION.md
evals/: assertions.py  cases.yaml  challenges.py  contracts.py  run_eval.py  runtime_cases.py
expert_knowledge/: ROLE5_CTF_EXPERT.md
mcp_client/: ROLE2_MCP_PLATFORM.md
outputs/: TGA_short_term_report.pptx  TGA_short_term_report.pptx.inspect.ndjson
runs/: mcp-smoke-default-final.json
scripts/: tga_capability_registry.py  tga_generate_report.py  tga_llm_healthcheck.py  tga_mcp_bootstrap.py  tga_mcp_catalog.py  tga_mcp_healthcheck.py  tga_mcp_smoke.py  tga_run_demo.py
tests/: ROLE4_INFRA_TESTING.md  test_agent_session_runtime.py  test_api_routes.py  test_artifact_preview.py  test_capabilities.py  test_capability_http.py  test_capability_registry.py  test_capability_tool_invoke.py  test_capability_workspace.py  test_cli_main.py  test_config_loader.py  (+35 more)
(+204 files in other folders)
