[project]
name = "tga-team-gipsy-agent"
version = "0.1.0"
description = "Team Gipsy Agent: authorized vulnerability review and CTF-solving MVP."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
tga = "tga.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

