[project]
name = "tga-team-gipsy-agent"
version = "0.1.0"
description = "Team Gipsy Agent: authorized vulnerability review and CTF-solving MVP."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "pydantic>=2.7",
    "pywebview>=5.4",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
tga = "tga.cli.main:main"

[tool.setuptools.packages.find]
include = ["tga*", "apps*"]
exclude = ["tests*", "docs*", "examples*", "scripts*", "runs*", "开发指导*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
